==> Samraksh/eMote44/DeviceCode/Targets/Native/radio/SX1276/SX1276wrapper.cpp <==
#include <Samraksh/VirtualTimer.h>
#include "SX1276wrapper.h"
#include "sx1276wrapper_definitions.h"
#define SX1276M1BxASWrapper_debug_PIN (GPIO_PIN)120
#define AMPED_RADIO 0
#define DEBUG_LORA_PRINT 0
#define READ_OPMODE() (Read( REG_OPMODE ) & ~RFLR_OPMODE_MASK)

void SX1276M1BxASWrapper::reset(){
	CPU_GPIO_SetPinState(SX1276_pin_setup.reset_mf_pin, TRUE);
	CPU_GPIO_SetPinState(SX1276_pin_setup.reset_mf_pin, FALSE);
}

uint8_t SX1276M1BxASWrapper::radio_spi_go(uint8_t data)  {
	while( SPI_I2S_GetFlagStatus(SX1276_pin_setup.spi_base, SPI_I2S_FLAG_TXE) == RESET ) ; // spin
	SPI_I2S_SendData(SX1276_pin_setup.spi_base, data);
	while( SPI_I2S_GetFlagStatus(SX1276_pin_setup.spi_base, SPI_I2S_FLAG_RXNE) == RESET ) ; // spin
	return SPI_I2S_ReceiveData(SX1276_pin_setup.spi_base);
}

void SX1276M1BxASWrapper::radio_spi_sel_no_assert() {
	GPIO_WriteBit(SX1276_pin_setup.cs_port, SX1276_pin_setup.cs_pin, Bit_SET); // chip select
}

void SX1276M1BxASWrapper::radio_spi_sel_assert() {
	GPIO_WriteBit(SX1276_pin_setup.cs_port, SX1276_pin_setup.cs_pin, Bit_RESET); // chip select
	__NOP();
}

void SX1276M1BxASWrapper::Reset() { //TODO: B
	CPU_GPIO_EnableOutputPin(SX1276_pin_setup.reset_mf_pin, FALSE);
	VirtTimer_SleepMicroseconds(VIRT_TIMER_SX1276_txTimeout, 10000 );
	CPU_GPIO_SetPinState( SX1276_pin_setup.reset_mf_pin, TRUE );
	VirtTimer_SleepMicroseconds(VIRT_TIMER_SX1276_txTimeout, 10000 );

}

void SX1276M1BxASWrapper::IoIrqInit() {
	EXTI_ClearITPendingBit(EXTI_Line1); // fix me, hard coded, also is this actually needed?
	EXTI_ClearITPendingBit(EXTI_Line8); // fix me, hard coded, also is this actually needed?
	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO0, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler0, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line1);
//	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO1, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler1, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line1);
//	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO2, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler2, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line1);
	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO3, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler3, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line8);
//	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO4, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler4, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line1);
//	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO5, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler5, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line1);
}
