==> Samraksh/eMote44/DeviceCode/Targets/Native/STM32H7/DeviceCode/radio/SX1276/SX1276wrapper.cpp <==
#include "SX1276wrapper.h"
#include "sx1276wrapper_definitions.h"
#define SX1276M1BxASWrapper_debug_PIN (GPIO_PIN)120
#define AMPED_RADIO 0
#define DEBUG_LORA_PRINT 0
#define READ_OPMODE() (Read( REG_OPMODE ) & ~RFLR_OPMODE_MASK)

void SX1276M1BxASWrapper::reset(){
	HAL_GPIO_WritePin(SX1276_pin_setup.reset_port, SX1276_pin_setup.reset_pin, GPIO_PIN_SET);
	HAL_GPIO_WritePin(SX1276_pin_setup.reset_port, SX1276_pin_setup.reset_pin, GPIO_PIN_RESET);
}

uint8_t SX1276M1BxASWrapper::radio_spi_go(uint8_t data)  {
	//hal_printf("GetTick: %d \r\n", HAL_GetTick());
	hal_printf("TxData: 0x%.8X \r\n", data);
	while(!(LoRaSpiHandle.Instance->SR & SPI_FLAG_TXP)) ; // spin
	//hal_printf("GetTick: %d \r\n", HAL_GetTick());
	HAL_SPI_Transmit(&LoRaSpiHandle, &data, sizeof(&data)/sizeof((data)) - 1, 50);
	//while(!(LoRaSpiHandle.Instance->SR & SPI_FLAG_RXP));
	HAL_SPI_Receive(&LoRaSpiHandle, &data, sizeof(&data)/sizeof((data)) - 1, 50);
	hal_printf("RxData: 0x%.8X \r\n", data);	
	return data;
}

void SX1276M1BxASWrapper::radio_spi_sel_no_assert() {
	HAL_GPIO_WritePin(SX1276_pin_setup.cs_port, SX1276_pin_setup.cs_pin, GPIO_PIN_SET); // chip select
}

void SX1276M1BxASWrapper::radio_spi_sel_assert() {
	HAL_GPIO_WritePin(SX1276_pin_setup.cs_port, SX1276_pin_setup.cs_pin, GPIO_PIN_RESET); // chip select
	__NOP();
}

void SX1276M1BxASWrapper::Reset() { //TODO: B
	CPU_GPIO_EnableOutputPin(SX1276_pin_setup.reset_mf_pin, FALSE);
	//VirtTimer_SleepMicroseconds(VIRT_TIMER_SX1276_txTimeout, 10000 );
	CPU_GPIO_SetPinState( SX1276_pin_setup.reset_mf_pin, TRUE );
	//VirtTimer_SleepMicroseconds(VIRT_TIMER_SX1276_txTimeout, 10000 );

}

void SX1276M1BxASWrapper::IoIrqInit() {
	//EXTI_ClearITPendingBit(EXTI_Line1); // fix me, hard coded, also is this actually needed?
	//EXTI_ClearITPendingBit(EXTI_Line8); // fix me, hard coded, also is this actually needed?
	HAL_EXTI_D1_ClearFlag(EXTI_LINE1);
	HAL_EXTI_D1_ClearFlag(EXTI_LINE8);
	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO0, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler0, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line1);
//	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO1, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler1, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line1);
//	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO2, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler2, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line1);
	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO3, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler3, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line8);
//	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO4, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler4, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line1);
//	CPU_GPIO_EnableInputPin(SX1276_interupt_pins.DIO5, FALSE, SX1276M1BxASWrapper::SX1276_Radio_Interrupt_Handler5, GPIO_INT_EDGE_HIGH, RESISTOR_DISABLED);
//	EXTI_ClearITPendingBit(EXTI_Line1);
}
